Build 4 triangles in CSS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       
       <div class="bottom-triangles">
-        <div class-"three">
+        <div class="three">
         </div>
         <div class="four">
         </div>
