Add numbers to first step

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
       <div class=fortune>
         <div class="top-triangles">
           <div class="one scale">
+            <p>orange</p>
           </div>
           <div class="two scale">
+            <p>pink</p>
           </div>
         </div>
         
         <div class="bottom-triangles">
           <div class="three scale">
+            <p>pinker</p>
           </div>
           <div class="four scale">
+            <p>pinkest</p>
           </div>
         </div>
         
