Add -click classes to triangles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>pinker</p>
           </div>
           <div class="four scale">
-            <p>pinkest</p>
+            <p>purple</p>
           </div>
         </div>
 
