Make changes to get code working

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <h1>Your Future...</h1>
       <div class=fortune>
         <div class="top-triangles">
-          <div class="one scale">
+          <div class="triangles one scale">
             <p>orange</p>
           </div>
-          <div class="two scale">
+          <div class="triangles two scale">
             <p>pink</p>
           </div>
         </div>
 
         <div class="bottom-triangles">
-          <div class="three scale">
+          <div class="triangles three scale">
             <p>pinker</p>
           </div>
-          <div class="four scale">
+          <div class="triangles four scale">
             <p>purple</p>
           </div>
         </div>
