Add class 'step-one' to colors

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <div class=fortune>
         <div class="top-triangles">
           <div class="triangles one scale">
-            <p>orange</p>
+            <p class="step-one">orange</p>
           </div>
           <div class="triangles two scale">
-            <p>pink</p>
+            <p class="step-one">pink</p>
           </div>
         </div>
 
         <div class="bottom-triangles">
           <div class="triangles three scale">
-            <p>pinker</p>
+            <p class="step-one">pinker</p>
           </div>
           <div class="triangles four scale">
-            <p>purple</p>
+            <p class="step-one">purple</p>
           </div>
         </div>
       </div>
