Enable hover effects

--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
         <div class="top-triangles">
           <div class="triangles one scale">
             <p class="step-one">orange</p>
+            <p class="step-two">1</p>
           </div>
           <div class="triangles two scale">
             <p class="step-one">pink</p>
+            <p class="step-two">2</p>
           </div>
         </div>
 
         <div class="bottom-triangles">
           <div class="triangles three scale">
             <p class="step-one">pinker</p>
+            <p class="step-two">3</p>
           </div>
           <div class="triangles four scale">
             <p class="step-one">purple</p>
+            <p class="step-two">4</p>
           </div>
         </div>
       </div>
