--- a/index.html
+++ b/index.html
@@ -9,26 +9,42 @@
   <body>
     <div class="container">
       <h1>Your Future...</h1>
-      <div class=fortune>
+      <div class="fortune-one">
         <div class="top-triangles">
           <div class="triangles one scale">
             <p class="step-one">orange</p>
-            <p class="step-two">1</p>
           </div>
           <div class="triangles two scale">
             <p class="step-one">pink</p>
-            <p class="step-two">2</p>
           </div>
         </div>
 
         <div class="bottom-triangles">
           <div class="triangles three scale">
             <p class="step-one">pinker</p>
-            <p class="step-two">3</p>
           </div>
           <div class="triangles four scale">
             <p class="step-one">purple</p>
-            <p class="step-two">4</p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="fortune-two">
+        <div class="top-triangles">
+          <div class="triangles one scale">
+            <p>1</p>
+          </div>
+          <div class="triangles two scale">
+            <p>2</p>
+          </div>
+        </div>
+
+        <div class="bottom-triangles">
+          <div class="triangles three scale">
+            <p>3</p>
+          </div>
+          <div class="triangles four scale">
+            <p>4</p>
           </div>
         </div>
       </div>
