Convert fotune-one/two to id

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>Your Future...</h1>
-      <div class="fortune-one">
+      <div id="fortune-one">
         <div class="top-triangles">
           <div class="triangles one scale">
             <p class="step-one">orange</p>
@@ -19,7 +19,7 @@
           </div>
         </div>
 
-        <div class="bottom-triangles">
+        <div id="bottom-triangles">
           <div class="triangles three scale">
             <p class="step-one">pinker</p>
           </div>
