Add loopTwo Code

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
       <div class="fortune-two">
         <div class="top-triangles">
           <div class="triangles one scale">
-            <p>1</p>
+            <p class="step-two">1</p>
           </div>
           <div class="triangles two scale">
-            <p>2</p>
+            <p class="step-two">2</p>
           </div>
         </div>
 
         <div class="bottom-triangles">
           <div class="triangles three scale">
-            <p>3</p>
+            <p class="step-two">3</p>
           </div>
           <div class="triangles four scale">
-            <p>4</p>
+            <p class="step-two">4</p>
           </div>
         </div>
       </div>
