Create 3rd fortune

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
       <h1>Your Future...</h1>
       <div class="fortune-one">
+          <h2>Pick a Color</h2>
         <div class="top-triangles">
           <div class="triangles one scale">
             <p class="step-one">orange</p>
@@ -30,6 +31,28 @@
       </div>
       
       <div class="fortune-two">
+        <h2>Pick a Number</h2>
+        <div class="top-triangles">
+          <div class="triangles one scale">
+            <p class="step-two">1</p>
+          </div>
+          <div class="triangles two scale">
+            <p class="step-two">2</p>
+          </div>
+        </div>
+
+        <div class="bottom-triangles">
+          <div class="triangles three scale">
+            <p class="step-two">3</p>
+          </div>
+          <div class="triangles four scale">
+            <p class="step-two">4</p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="fortune-three">
+        <h2>Pick a Number</h2>
         <div class="top-triangles">
           <div class="triangles one scale">
             <p class="step-two">1</p>
