Remove more CSS space

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       
       <div class="fortune-three">
-        <h2>Pick a Number</h2>
+        <h2>Pick Another Number</h2>
         <div class="top-triangles">
           <div class="triangles one scale">
             <p class="step-two">1</p>
