Add const fortune

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         <h2>Pick Another Number</h2>
         <div class="top-triangles">
           <div class="triangles one scale">
-            <p class="step-two">1</p>
+            <p class="step-three">5</p>
           </div>
           <div class="triangles two scale">
-            <p class="step-two">2</p>
+            <p class="step-three">6</p>
           </div>
         </div>
 
         <div class="bottom-triangles">
           <div class="triangles three scale">
-            <p class="step-two">3</p>
+            <p class="step-three">7</p>
           </div>
           <div class="triangles four scale">
-            <p class="step-two">4</p>
+            <p class="step-three">8</p>
           </div>
         </div>
       </div>
